option('emulator',
  type : 'combo',
  choices : [
    'QuickNES',
    'QuickerNES',
    'QuickerNESArkanoid',
    'QuickerGPGX',
    'QuickerSDLPoP',
    'QuickerSnes9x',
    'QuickerStella',
    'Atari2600Hawk',
    'QuickerSMBC',
    'QuickerNEORAW',
    'QuickerRAWGL',
    'QuickerArkBot',
    'QuickerMGBA',
    'QuickerGambatte',
    'QuickerDSDA',
    'QuickerBan'
   ],
  description : 'Selects the emulation core to compile JaffarPlus with'
)

option('gamesFolder',
  type : 'string',
  value : '',
  description : 'Allows setting a custom games folder',
)

option('buildTests',
  type : 'boolean',
  value : true,
  description : 'Build test programs and creates the test suite',
  yield: true
)

option('useNCurses',
  type : 'boolean',
  value : true,
  description : 'Enable NCurses for console output',
  yield: true
)
