option('emulator',
  type : 'combo',
  choices : [
    'QuickNES',
    'QuickerNES',
    'QuickerNESArkanoid',
    'QuickerGPGX',
    'QuickerSDLPoP',
    'QuickerSnes9x',
    'QuickerStella',
    'Atari2600Hawk',
    'QuickerSMBC',
    'QuickerNEORAW',
    'QuickerRAWGL',
    'QuickerArkBot',
    'QuickerMGBA',
    'QuickerGambatte',
    'QuickerDSDA',
    'PipeBot',
    'TestEmulator'
   ],
  description : 'Selects the emulation core to compile JaffarPlus with'
)

option('gamesFolder',
  type : 'string',
  value : '',
  description : 'Allows setting a custom games folder',
)

option('buildTests',
  type : 'boolean',
  value : true,
  description : 'Build test programs and creates the test suite',
  yield: true
)

option('useNCurses',
  type : 'boolean',
  value : true,
  description : 'Enable NCurses for console output',
  yield: true
)

option('detailedProfiling',
  type : 'boolean',
  value : false,
  description : 'Enable fine-grained per-operation timing in the engine hot loop. Adds two clock_gettime calls per timed region (a real cost for light emulators, negligible for heavy ones), so it is off by default; per-step throughput and the coarse step timers remain available either way.',
  yield: true
)
