option('emulator',
  type : 'combo',
  choices : [
    'QuickNES',
    'QuickerNES',
    'QuickerNESArkanoid',
    'QuickerGPGX',
    'QuickerSDLPoP',
    'QuickerSnes9x',
    'QuickerStella',
    'Atari2600Hawk',
    'QuickerSMBC',
    'QuickerNEORAW',
    'QuickerRAWGL',
    'QuickerArkBot',
    'QuickerMGBA',
    'QuickerGambatte',
    'QuickerDSDA',
    'PipeBot',
    'TestEmulator',
    'ExciteBikeNative',
    'NesHawk'
   ],
  description : 'Selects the emulation core to compile JaffarPlus with'
)

option('gamesFolder',
  type : 'string',
  value : '',
  description : 'Allows setting a custom games folder',
)

option('game',
  type : 'string',
  value : '',
  description : 'Compile only a single game (by header stem, e.g. -Dgame=sprilo) instead of all games of the selected emulator. Empty = all games.',
)

option('buildTests',
  type : 'boolean',
  value : true,
  description : 'Build test programs and creates the test suite',
  yield: true
)

option('useNCurses',
  type : 'boolean',
  value : true,
  description : 'Enable NCurses for console output',
  yield: true
)

option('detailedProfiling',
  type : 'boolean',
  value : false,
  description : 'Enable fine-grained per-operation timing in the engine hot loop. Adds two clock_gettime calls per timed region (a real cost for light emulators, negligible for heavy ones), so it is off by default; per-step throughput and the coarse step timers remain available either way.',
  yield: true
)

option('doomCore',
  type : 'combo',
  choices : [ 'new', 'base' ],
  value : 'new',
  description : 'QuickerDSDA: which core to link -- new (headless TLS, for parallel search) or base (pristine non-TLS, full SDL rendering, for a visual jaffar-player)'
)
