if 'QuickerNES' in emulators
jaffarCPPFlags += '-D__JAFFAR_USE_QUICKERNES'
subdir('quickerNES')
endif

if 'QuickerSDLPoP' in emulators
jaffarCPPFlags += '-D__JAFFAR_USE_QUICKERSDLPOP'
subdir('quickerSDLPoP')
endif

if 'QuickerSnes9x' in emulators
jaffarCPPFlags += '-D__JAFFAR_USE_QUICKERSNES9X'
subdir('quickerSnes9x')
endif

if 'QuickerGPGX' in emulators
jaffarCPPFlags += '-D__JAFFAR_USE_QUICKERGPGX'
subdir('quickerGPGX')
endif

if 'QuickerStella' in emulators
jaffarCPPFlags += '-D__JAFFAR_USE_QUICKERSTELLA'
subdir('quickerStella')
endif
